# FuelCounter

./: .gitignore  app.py  main.py  motion.py  picam.py  pyproject.toml  server.py  source.py  update-monaco.sh  vision.py
config/: camera.json  pipeline.json
templates/: index.html
